fix(menu): stretch menu list container to fit all items

--- a/src/styles/_dropdown-menu.less
+++ b/src/styles/_dropdown-menu.less
@@ -428,7 +428,7 @@
     max-width: 800px;
 
     .dd-menu-items {
-      width: 700px;
+      width: max-content;
 
       .dd-items-left {
         display: flex;
